css/mobile.css
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    border: 0;
}

html,body
{
    width: 100%;
    margin: 0 !important;
    padding-right: 0 !important;
    padding-left: 0 !important;
}

body {
    background-color: #fafaf6; /* #fafaf6 */
    color: black;
    scroll-behavior: smooth;
}

header {
    height: 100vh;
    width: 100vw;
    margin-bottom: 10px;
    background: url("../img/splashscreen.jpg") no-repeat center center;
    background-size: cover;
    display: flex;
    flex-direction: column;
    overflow-x: hidden;

}

.header-container{
  padding-left: 20px;
  padding-right: 20px;
  font-size: 1em;
  /* color: #40E0D0; */
}

.header-container h1 {
  font-size: 2em;
  /* color: #40E0D0; */
}

.header-container h3 {
  font-size: 1em;
  /* color: #40E0D0; */
}

.logo {
	height: 100px;
	width: 100px;
  float: left;
}


.name{
  float: right;
  font-size: 1em;
}

.header-marker{
  text-align: center;
  justify-content: center;
  color: #40E0D0;
}

.typing-text{
  color: #40E0D0;
}

hr {
	height: 30px;
}

.school_proj{
  padding: 70px !important;
}

.arrow{
  text-align: center;
  margin-bottom: 20px;
}
.bio{
  font-size: 15px;
  text-align: center;
}

.bio-section{
  height: 100vh;
}



.webninja {
    width: 100%;
    max-height: 800px;
}

.feat_thumbnail {
    display: block;
    /* min-width: 100%; */
    width: 210px;
    height: 150px;
    /*object-fit: scale-down;*/
    border-radius: 5px;
}

.featuredprojects{
  background-image: url("../img/coding.jpg");
  height: 100vh;
  width: 100vw;
  color: #40E0D0;
  overflow-x: hidden !important;
  margin: 0 !important;
}

.skills_section{
  display: none;
}

.contact_arrow{
  margin-top: 200px !important;
}

.contact{
  text-align: center;
  padding-top: 300px;
  height: 100vh;
  width: 100vw;
  /* background-color: #40E0D0; */
  background-color: #fafaf6; /* #fafaf6 */

  overflow: hidden;
}

.contact-modal{
  background-color: #40E0D0;
}

footer {
    margin-right: 10px;
    margin-left: 10px;
    text-align: center;
}

.bio-contact{
  height: 100vh;
  margin-bottom: 10px;
  width: auto;
  display: flex;
  flex-direction: column;
}




/*     Card Flip Styling    */
.card{
  margin: 20px;
  background: #5677fc;
  width: 200px;
  height: 200px;
  transition: all 0.6s ease;
  transition: all 2s ease;
  transform-style: preserve-3d;
}

.card:active{
  transform: rotateX(180deg);
}

.card:hover{
  transform: rotateX(180deg);
}

.card-container{
  perspective: 600;
}
/*     end of Card    still testing ---  */


.unstyled-button{
  background: none transparent;
  border: none;
}

/*Neon*/
.contact {
  text-align: center;
  font-size: 7em;
  /* margin: 20px 0 20px 0; */
  color: black;
}

.icon{
  padding-right: 30px;
  padding-bottom: 30px;
}

a {
  text-decoration: none;
  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
  transition: all 0.5s;
}

p a {
  color: #fff;
  font-family: Monoton;
  -webkit-animation: neon1 1.5s ease-in-out infinite alternate;
  -moz-animation: neon1 1.5s ease-in-out infinite alternate;
  animation: neon1 1.5s ease-in-out infinite alternate;
}

